# case-hackathon-2024

./: .gitignore  README.md  base_notebook.ipynb  pyproject.toml  requirements.txt
data/: electricity_prices.csv  power_curve.csv  wind_data.csv
src/: data_utils.py  strategy_utils.py
